@@ -17,7 +17,7 @@ describe Court do
       @court1.contacts.count.should == 0
     end
 
-    pending "should not allow the same phone number to be added to a court contact" do
+    it "should not allow the same phone number to be added to a court contact" do
       2. times { @court1.contacts.create(telephone: "50800 800 8080", contact_type_id: @helpdesk.id) }
       @court1.contacts.count.should == 1
     end
