@@ -1,5 +1,6 @@
 v2.6.0-dev
 ---------------------
+65905292 - Phone number editing - don't allow duplicate numbers to be entered
 
 v2.5.0
 ---------------------
